Massive memory leak (at least AMD, others unknown)
Hi,
First time here-- found out about here through Ubuntu's oibaf ppa. Recently as of September 11th's mesa compile by oibaf (20.3git2009110730.65d0faoibaf~f) mesa is leaking massive amounts of memory. On 8G of ram with an r9 290, ram fills completely up in about 10-15 minutes. After that, the system begins to swap to the 8G swap partition for another 10 or so minutes. Then, oom-killer starts killing processes before the system completely freezes.
It's not any process or update; I have traced it down to only that mesa update. Reverting from oibaf's ppa to stock drivers immediately fixes the issue. Reverting to any compile before that also fixes the issue. Also, ps aux | awk '{sum+=\$6} END {print sum / 1024}'
gives a count of actual process memory in megabytes, and it is never all of system ram. This has to be somewhere in the drivers.
Not sure if its AMD-only or otherwise. I do know that I am already not the only one to have experienced this; here's a reddit post with other affected users, including reproductions of the bug on non-ubuntu/non-oibaf compiles of mesa git: https://www.reddit.com/r/Ubuntu/comments/ir9kvx/ubuntu_2004_possible_memory_leak_with_gnomeshell
I posted the bug on r/linux as well https://www.reddit.com/r/linux/comments/irnrqv/warning_about_a_brandnew_memory_leak_in_mesa_at/ to find out whether its AMD-exclusive or affects everyone.
Occurs on both wayland and Xorg. Believe it or not, it's not gnome this time.
System
R9 290 4096MB
G3258 @ 4.5GHz
8192MB DDR3
amdgpu (not radeon) kernel module
Oibaf Mesa (build string: 20.3git2009110730.65d0faoibaf~f)
Ubuntu 20.04